# sornobase

./: .gitignore  LICENSE  pypi_deploy.sh  pypi_deploy_with_twine.sh  pyproject.toml  setup.py  setup_test_env.sh  test.sh  test_sornobase.sh
sornobase/: stringutil.py
sornobase/tests/: test_consoleutil.py  test_datetimeutil.py  test_dictutil.py  test_fileutil.py  test_mathlib.py  test_stringutil.py  test_webutil.py
workflows/: publish.yml
